@@ -1,3 +1,11 @@
+2008-07-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* ieee.c (write_ieee_debugging_info): Use bfd_make_section_with_flags.
+	* nlmconv.c (main, powerpc_build_stubs): Likewise.
+	* rescoff.c (write_coff_file): Likewise.
+	* resres.c (write_res_file): Likewise.
+	* windmc.c (windmc_write_bin): Likewise.
+
 2008-06-18  M R Swami Reddy <MR.Swami.Reddy@nsc.com>
 
 	* readelf.c (guess_is_rela): Add EM_CR16_OLD.
